src/scss/_custom.scss
// Required for modifying core defaults
@import '~vuetify/src/styles/styles.sass';

// Any component modifications must be imported
@import '~vuetify/src/components/VBtn/_variables.scss';

$btn-font-weight: 600;

html, body {
  overflow-x: hidden !important;
  overflow-y: hidden !important;
}

a {
  text-decoration: none;
}

pre {
  max-width: 100%;
  overflow-x: auto;
  background-color: $transparent;
  padding: 6px 6px 0;
}

.v-application code {
  font-size: 11px !important;
  background-color: $transparent !important;
  white-space: pre !important;
}

p>code {
  display: inline !important;
  padding: 0 3px !important;
}

.v-application {
  font-family: Ubuntu Mono !important;
  font-style: normal;
  font-variant: normal;
}

.w-100 {
  width: 100% !important;
}

.custom-highlight-row{
  background-color: $primary;
}

.code-card.theme--dark {
  background-color: $grey3 !important;
}

.code-card.theme--light {
  background-color: white;
}

.v-card__text {
  padding: 4px 16px;
}

.v-content__wrap {
  overflow:auto;
  max-height: calc(100vh - 94px);
}

.theme--dark.v-expansion-panels .v-expansion-panel .v-expansion-panel-header, .drawer-toolbar.theme--dark {
  background-color: $grey5;
}

.theme--light.v-expansion-panels .v-expansion-panel .v-expansion-panel-header,.drawer-toolbar.theme--light {
  background-color: $greyLight;
}

.v-expansion-panel-content__wrap {
  padding: 0px !important;
}

.v-application--is-ltr .v-list-item__action:first-child, .v-application--is-ltr .v-list-item__icon:first-child {
  margin-right: 0px;
}

.api-item-content-expanded {
  margin-left: 15px;
}

.v-footer {
  font-size: 14px;
  padding: 1px 0;
}

.v-btn {
  text-transform:none;
}

.api-dropdown {
  position: absolute;
  right: 0px;
  top:100px;
}

.editor {
  height: calc(100vh - 143px);
}

.theme--dark.v-tabs > .v-tabs-bar {
  background-color: $transparent !important;
}

.v-navigation-drawer--fixed {
  z-index: 13 !important;
  min-width: 372px !important;
}

.v-navigation-drawer--clipped {
  z-index: 11 !important;
  min-width: 372px !important;
}

.v-app-bar.v-app-bar--fixed {
  z-index: 12 !important;
}

.v-navigation-drawer__border {
  z-index: 2 !important;
}

.v-tooltip__content {
  z-index: 14 !important;
}

#homeButton::before {
  opacity: 0
}

